certmanager/acme-clusterissuer/debug-acme/ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["172.16.1.70"],"port":80,"protocol":"HTTP","serviceName":"istio-system:cm-acme-http-solver-2lqjf","ingressName":"istio-system:cm-acme-http-solver-vv7k2","hostname":"test.inv.gov.ar","path":"/.well-known/acme-challenge/PK5VEbAfZdCENM2k7YOQx9Ir-cgaWuugtkArfodJ2Q0","allNodes":false}]'
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
  creationTimestamp: "2025-02-28T09:56:01Z"
  generateName: cm-acme-http-solver-
  generation: 1
  labels:
    acme.cert-manager.io/http-domain: "783746487"
    acme.cert-manager.io/http-token: "846990935"
    acme.cert-manager.io/http01-solver: "true"
  name: cm-acme-http-solver-vv7k2
  namespace: istio-system
  ownerReferences:
  - apiVersion: acme.cert-manager.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Challenge
    name: test-cert-1-2708966330-3173574260
    uid: 3316783b-ec41-451e-8379-456c906d66f1
  resourceVersion: "5818599"
  uid: c1f30733-5218-4f98-af64-95da3a5dc99b
spec:
  rules:
  - host: test.inv.gov.ar
    http:
      paths:
      - backend:
          service:
            name: cm-acme-http-solver-2lqjf
            port:
              number: 8089
        path: /.well-known/acme-challenge/PK5VEbAfZdCENM2k7YOQx9Ir-cgaWuugtkArfodJ2Q0
        pathType: ImplementationSpecific
